# cloudkit-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_account_status_smoke.rs  02_database_zones_and_subscriptions.rs  03_record_value_roundtrip.rs  04_record_id_construction.rs  05_zone_construction.rs  06_subscription_builders.rs  07_operation_builders.rs  08_share_local_construction.rs  09_notification_info_builder.rs  10_query_builder.rs  11_fetched_results_smoke.rs  12_reference_utility.rs  13_server_change_token_bytes.rs  14_asset_file_url.rs  15_user_identity_lookup.rs
src/: asset.rs  async_api.rs  constants.rs  container.rs  database.rs  error.rs  fetched_results.rs  ffi.rs  lib.rs  notification.rs  notification_info.rs  operation.rs  operation_support.rs  private.rs  query.rs  record.rs  record_id.rs  reference_utility.rs  server_change_token.rs  share.rs  subscription.rs  sync_engine.rs  user_identity.rs  zone.rs
swift-bridge/: Package.swift
swift-bridge/Sources/CloudKitBridge/: Asset.swift  Async.swift  Container.swift  Core.swift  Database.swift  FetchedResults.swift  NotificationInfo.swift  Operations.swift  Query.swift  Record.swift  RecordID.swift  ReferenceUtility.swift  ServerChangeToken.swift  (+5 more)
tests/: asset_tests.rs  async_api_tests.rs  container_tests.rs  database_tests.rs  expanded_surface_tests.rs  fetched_results_tests.rs  notification_info_tests.rs  operation_tests.rs  query_tests.rs  record_id_tests.rs  record_tests.rs  reference_utility_tests.rs  server_change_token_tests.rs  share_tests.rs  subscription_tests.rs  user_identity_tests.rs  zone_tests.rs
(+1 files in other folders)
